Implement follow user, adding testcases

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
+python-dotenv
 fastapi
 uvicorn
 pydantic
 pydantic-settings
 pydantic[email]
 sqlalchemy
+sqlalchemy-utils
 pymysql
 pyjwt
 python-jose
