--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
-database_url = "sqlite:///database.db"
-
-SECRET_KEY = "your-secret-key"
-ALGORITHM = "HS256"
-ACCESS_TOKEN_EXPIRE_MINUTES = 30
+ENVIRONMENT=local
+DATABASE_URL=sqlite:///./database.db
+SECRET_KEY=your-secret-key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
