--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,25 @@
+version: "3.8"
+
 services:
   db:
     image: mysql:8.0
     environment:
-      MYSQL_DATABASE: realworld
-      MYSQL_USER: username
-      MYSQL_PASSWORD: password
-      MYSQL_ROOT_PASSWORD: rootpassword
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     ports:
-      - "3306:3306"
+      - "${DB_PORT}:3306"
     volumes:
       - db_data:/var/lib/mysql
+    profiles:
+      - ${ENVIRONMENT}  # Profile based on environment variable
+    networks:
+      - backend_network
+
+networks:
+  backend_network:
+    driver: bridge
 
 volumes:
   db_data:
