--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 ENVIRONMENT=dev
-MYSQL_DATABASE=realworld
-MYSQL_USER=username
-MYSQL_PASSWORD=password
-MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=my_db_dev
+MYSQL_USER=dev_user
+MYSQL_PASSWORD=dev_pass
+MYSQL_ROOT_PASSWORD=dev_root_pass
 DB_PORT=3306
 
-DATABASE_URL=mysql+pymysql://username:password@db:3306/realworld
+DATABASE_URL=mysql+pymysql://dev_user:dev_pass@localhost:3306/my_db_dev
 SECRET_KEY=your-secret-key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
