--- a/.env.test
+++ b/.env.test
@@ -1,11 +1,11 @@
 ENVIRONMENT=test
-MYSQL_DATABASE=test_db
-MYSQL_USER=username
-MYSQL_PASSWORD=password
-MYSQL_ROOT_PASSWORD=rootpassword
+MYSQL_DATABASE=my_db_test
+MYSQL_USER=test_user
+MYSQL_PASSWORD=test_pass
+MYSQL_ROOT_PASSWORD=test_root_pass
 DB_PORT=13306
 
-DATABASE_URL=mysql+pymysql://username:password@db:13306/test_db
+DATABASE_URL=mysql+pymysql://test_user:test_pass@db_test:3306/my_db_test
 SECRET_KEY=your-secret-key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
