--- a/.env.dev
+++ b/.env.dev
@@ -5,7 +5,7 @@ MYSQL_PASSWORD=dev_pass
 MYSQL_ROOT_PASSWORD=dev_root_pass
 DB_PORT=3306
 
-DATABASE_URL=mysql+pymysql://dev_user:dev_pass@localhost:3306/my_db_dev
+DATABASE_URL=mysql+pymysql://dev_user:dev_pass@db_dev:3306/my_db_dev
 SECRET_KEY=your-secret-key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
