--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,7 @@ services:
     image: mysql:8.0
     container_name: "db_dev"
     env_file:
-      - path: "./.env.dev"
-        required: true
+      - .env.dev
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
@@ -15,9 +14,9 @@ services:
     ports:
       - "${DB_PORT}:3306"
     volumes:
-      - db_data_dev:/var/lib/mysql"
+      - db_data_dev:/var/lib/mysql
     profiles:
-      - dev  # Profile based on environment variable
+      - dev
     networks:
       - dev_network
     healthcheck:
@@ -25,12 +24,30 @@ services:
       interval: 10s
       retries: 5
 
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+      # dockerfile: Dockerize
+    depends_on:
+      db:
+        condition: service_healthy
+    env_file:
+      - .env.dev
+    ports:
+      - "8888:8000"
+    volumes:
+      - .:/app  # Mount the app source code for live reloading
+    networks:
+      - dev_network
+    profiles:
+      - dev
+
   db_test:
     image: mysql:8.0
     container_name: db_test
     env_file:
-      - path: ./.env.test
-        required: true
+      - .env.test
     environment:
       MYSQL_DATABASE: ${MYSQL_DATABASE}
       MYSQL_USER: ${MYSQL_USER}
@@ -39,9 +56,9 @@ services:
     ports:
       - "${DB_PORT}:3306"
     volumes:
-      - db_data_test:/var/lib/mysql"
+      - db_data_test:/var/lib/mysql
     profiles:
-      - test  # Profile based on environment variable
+      - test
     networks:
       - test_network
     healthcheck:
@@ -49,19 +66,17 @@ services:
       interval: 10s
       retries: 5
 
-    # Application service where tests will run
   tests:
     build:
       context: .
       dockerfile: ./app/tests/Dockerfile
     depends_on:
       db_test:
-        condition: service_healthy  # Ensure db is ready before running tests
+        condition: service_healthy
     env_file:
-      - path: ./.env.test
-        required: true
+      - .env.test
     volumes:
-      - .:/app  # Mount the app source code
+      - .:/app
     networks:
       - test_network
     profiles:
